For linux and flatpak set a qmlcache folder dependend on commit num to get around QT stale  qml cache bug. Cleans up old caches

--- a/Desktop/utilities/appdirs.h.in
+++ b/Desktop/utilities/appdirs.h.in
@@ -47,7 +47,9 @@ public:
 	static QDir    programDir();
 	static QString renvRootLocation();
 	static QString renvCacheLocations();
-	
+#ifdef linux
+    static QDir    qmlCacheDir();
+#endif
 private:
 	static QString processPath(const QString & path);
 
