one small hack for man

--- a/Desktop/CMakeLists.txt
+++ b/Desktop/CMakeLists.txt
@@ -135,6 +135,7 @@ target_link_libraries(
     Qt::DBus
     Qt::QmlWorkerScript
     Qt::LabsFolderListModel
+	Qt::Mqtt
     # System
     ZLIB::ZLIB
     Iconv::Iconv
