--- a/.gitmodules
+++ b/.gitmodules
@@ -117,3 +117,7 @@
 	path = Modules/jaspPower
 	url = https://github.com/jasp-stats/jaspPower
 	branch = master
+[submodule "Modules/jaspPredictiveAnalytics"]
+	path = Modules/jaspPredictiveAnalytics
+	url = https://github.com/jasp-stats/jaspPredictiveAnalytics
+	branch = master
