--- a/Desktop/gui/preferencesmodel.cpp.in
+++ b/Desktop/gui/preferencesmodel.cpp.in
@@ -126,7 +126,7 @@ GET_PREF_FUNC_BOOL( guiQtTextRender,			Settings::GUI_USE_QT_TEXTRENDER						)
 GET_PREF_FUNC_BOOL( reportingMode,				Settings::REPORT_SHOW								)
 GET_PREF_FUNC_BOOL( showRSyntax,				Settings::SHOW_RSYNTAX								)
 GET_PREF_FUNC_BOOL( showAllROptions,			Settings::SHOW_ALL_R_OPTIONS						)
-GET_PREF_FUNC_STR(	remoteSettingsURL,			Settings::REMOTE_SETTINGS_URL						)
+GET_PREF_FUNC_STR(	remoteConfigurationURL,		Settings::REMOTE_CONFIGURATION_URL					)
 
 
 int PreferencesModel::maxEngines() const
@@ -307,7 +307,7 @@ SET_PREF_FUNCTION(				bool,		setGuiQtTextRender,			guiQtTextRender,			guiQtTextR
 SET_PREF_FUNCTION(				bool,		setReportingMode,			reportingMode,				reportingModeChanged,			Settings::REPORT_SHOW								)
 SET_PREF_FUNCTION_EMIT_NO_ARG(	bool,		setShowRSyntax,				showRSyntax,				showRSyntaxChanged,				Settings::SHOW_RSYNTAX								)
 SET_PREF_FUNCTION_EMIT_NO_ARG(	bool,		setShowAllROptions,			showAllROptions,			showAllROptionsChanged,			Settings::SHOW_ALL_R_OPTIONS						)
-SET_PREF_FUNCTION(				QString,	setRemoteSettingsURL,		remoteSettingsURL,			remoteSettingsURLChanged,		Settings::REMOTE_SETTINGS_URL						)
+SET_PREF_FUNCTION(				QString,	setRemoteConfigurationURL,	remoteConfigurationURL,		remoteConfigurationURLChanged,	Settings::REMOTE_CONFIGURATION_URL					)
 
 
 void PreferencesModel::setGithubPatCustom(QString newPat)
