--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,4 @@
 [submodule "Modules/jaspLearnStats"]
 	path = Modules/jaspLearnStats
 	url = https://github.com/jasp-stats/jaspLearnStats
+	branch = master
